sna/present: Postpone recursed vblank during TearFree by 1ms

Avoid postponing until the next vblank to avoid continually recursing
every TearFree update, and to minimise the presentation delay.

References: https://bugs.freedesktop.org/show_bug.cgi?id=94982
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>